--- a/Addins.NAV.Solution/Charts.BarChart/Charts.BarChart.csproj
+++ b/Addins.NAV.Solution/Charts.BarChart/Charts.BarChart.csproj
@@ -33,7 +33,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>StrongKeyName.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>BarChartKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Dynamics.Framework.UI.Extensibility">
@@ -52,7 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="StrongKeyName.pfx" />
+    <None Include="BarChartKey.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
